# Coding

./: .gitignore  LICENSE  P1003.cpp  P1067.cpp  P1217.cpp  P1248.c  P1424.c  P1464.cpp  P1478.cpp  P1553  P1553.cpp  P1598  P1618.cpp  P1911  P2089.cpp  P2141.c  README.md  proxy.pac  stdc++.h  test  test.c  test.cpp  test.go  插入排序.c
2020A/DSA/: 6-Task2_StackQueue.cpp  BFS.cpp
2020A/Mechine_Learning/: DecisionTree.py  Perceptron.py
2020A/PTA/: B7-1.cpp
2020A/vjudge/: UNFINISHED-n皇后.cpp  tesc.cpp  今年暑假不AC.cpp  数论三·约瑟夫问题.cpp  绝对值排序.cpp
2020S/Luogu/: P1022.cpp  P1023.cpp  P1036.cpp  P1055.cpp  P1200.cpp  P1308-vector.cpp  unfinished-P1056.cpp
2020S/NCUTOJ/: 10010.c  10011.c  10061.c  10064.c  10081.c  10082.c  字符连接.c
2020_Spring_Cpp/E1/: E1S2.cpp  E1S2_copy.cpp
2020_Spring_Cpp/E2/: c1_copy.cpp
2020_Spring_Cpp/E3/: C31_copy.cpp
2020_Spring_Cpp/E5/: B.cpp
2022S/ComputerNetwork_Exp3/: ComputerNetwork_Exp3.sln
2022S/videosplit/: main.py
Computer_Graphics/NCUT/CH 2.4/Test 1/: CMakeLists.txt
Computer_Graphics/NCUT/EXTRA/Blinn-Phong/: CMakeLists.txt  camera.hpp  main.cpp  shader.hpp
Computer_Graphics/NCUT/EXTRA/Blinn-Phong/shader/: fshader.fs  vshader.vs
Computer_Graphics/NCUT/EXTRA/Drawing Pad Demo/Drawing Pad Demo/: CMakeLists.txt  Drawing.cpp  Drawing.hpp  main.cpp
Computer_Graphics/NCUT/EXTRA/Sphere test/: CMakeLists.txt  main.cpp
DIP/Exp_1/: CMakeLists.txt
DIP/Exp_2/: CMakeLists.txt
DIP/test/: CMakeLists.txt  main.cpp
DSA/: 2-sqlist.cpp  3-linklist.cpp  4-dulinklist.cpp  7-BiTree.cpp  8-HFMTree_unfinished.cpp  BFS.cpp  BinarySearchTree.cpp  KMP.cpp  puz.txt
DSA/Map Shortest Path/: Floyd.cpp
DSA/Sorting Algorithm/: BubbleSort.cpp  BucketSort.cpp  QuickSort.cpp
DataBase/DB_Exp2/: 1-3.sql  1-4.sql  1-7.sql  2-3.sql  (+1 more)
DataStructure/: 7-BiTree.cpp  8-HFMTree.cpp  BiTree.cpp  HFTCSDN.cpp  StackQueue-test2  StackQueue-test2.cpp  Task2_StackQueue.cpp  Test1_CdLinkList.cpp  Test1_CdLinkList_ver.cpp  cdlinklist.cpp  sqlist.cpp
Luogu/: P1008.c  P1014.cpp  P1028.cpp  P1035.c  P1046.c  P1047.c  P1149.cpp  P1307.cpp  P1308-a.find().cpp  P1328.cpp  P1423.c  P1426.cpp  P1427.c  P1540.cpp  P1553.cpp  P1567.c  P1579.cpp  P1598.cpp  P1628  P1628.cpp  P1909.c  P1911.cpp  P1980.c
MechineLearning/: KNN.py  LinerRegression.py  NBM.py  SVM.py
Mechine_Learning/: Perceptron.py
NCUTOJ/: 10012.c  10013.c  10062.c  10063.c  10065.c  字符连接.c  对角线元素之和（数组）.c  对角线元素之和（无数组）.c  数组插入.c  筛选法求素数.c  鞍点.c
OTHER/: arc.py  yxj1.c  yxj2.c  zhihu 2.c  大作业1.4.py  插入排序.c
PTA/: A7-1.cpp  A7-2.cpp  A7-3.cpp  A7-4.cpp  A7-5.cpp  B7-2.cpp  B7-3.cpp
vjudge/: 一只小蜜蜂.cpp  士兵队列训练问题.cpp  斐波那契数列.cpp  最大的位或.cpp  棋盘问题.cpp  汉诺塔.cpp  绝对值排序.cpp  蟠桃记.cpp  迷宫问题.cpp
(+498 files in other folders)
